# 2shootFast

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
moc/: Scene.cpp  Scene.hpp
qObjs/: FigureSelectorAdapter.cpp  FigureSelectorAdapter.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  SceneBase.cpp  SceneBase.hpp  SceneCreator.cpp  SceneCreator.hpp
qtDep/: UserInputBase.cpp  UserInputBase.hpp  UserInputCreator.cpp  UserInputCreator.hpp
ui/: FiguresPanel.cpp  FiguresPanel.hpp  FiguresPanel.ui  FormDraw.cpp  FormDraw.hpp  FormDraw.ui  FormMain.cpp  FormMain.hpp  FormMain.ui
utils/: Define.hpp  InputHandler.cpp  InputHandler.hpp  InputManager.cpp  InputManager.hpp  Paint.cpp  Paint.hpp  PrintMethods.cpp  PrintMethods.hpp  SceneItem.cpp  SceneItem.hpp  Serialize.cpp  Serialize.hpp  UserInputBase.cpp  UserInputBase.hpp  UserInputCreator.cpp  UserInputCreator.hpp
